external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/index_autocomplete.ide.exp
note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:2:1
  │  
2 │ ╭ module std::vector {
3 │ │     #[syntax(index)]
4 │ │     native public fun vborrow<Element>(v: &vector<Element>, i: u64): &Element;
5 │ │     #[syntax(index)]
6 │ │     native public fun vborrow_mut<Element>(v: &mut vector<Element>, i: u64): &mut Element;
7 │ │ }
  │ ╰─^ Possible in-scope names: 'Option -> std::option::Option', 'Self -> std::vector', 'option -> std::option', 'vector -> std::vector', 'A -> 0x41', 'B -> 0x42', 'K -> 0x19', 'M -> 0x40', 'a -> 0x44', 'b -> 0x45', 'k -> 0x19', 'std -> 0x1', or 'sui -> 0x2'

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:4:51
  │
4 │     native public fun vborrow<Element>(v: &vector<Element>, i: u64): &Element;
  │                                                   ^^^^^^^ Possible in-scope names: 'Option -> std::option::Option', 'vborrow -> std::vector::vborrow', 'vborrow_mut -> std::vector::vborrow_mut', or 'Element'

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:4:71
  │
4 │     native public fun vborrow<Element>(v: &vector<Element>, i: u64): &Element;
  │                                                                       ^^^^^^^ Possible in-scope names: 'Option -> std::option::Option', 'vborrow -> std::vector::vborrow', 'vborrow_mut -> std::vector::vborrow_mut', or 'Element'

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:6:59
  │
6 │     native public fun vborrow_mut<Element>(v: &mut vector<Element>, i: u64): &mut Element;
  │                                                           ^^^^^^^ Possible in-scope names: 'Option -> std::option::Option', 'vborrow -> std::vector::vborrow', 'vborrow_mut -> std::vector::vborrow_mut', or 'Element'

note[I15006]: IDE path autocomplete
  ┌─ tests/move_2024/ide_mode/index_autocomplete.move:6:83
  │
6 │     native public fun vborrow_mut<Element>(v: &mut vector<Element>, i: u64): &mut Element;
  │                                                                                   ^^^^^^^ Possible in-scope names: 'Option -> std::option::Option', 'vborrow -> std::vector::vborrow', 'vborrow_mut -> std::vector::vborrow_mut', or 'Element'

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:10:3
   │
 9 │ #[allow(ide_path_autocomplete)]
   │   ----- Attribute previously given here
10 │ #[allow(ide_dot_autocomplete)]
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'allow' attached to the same item

warning[W09009]: unused struct field
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:15:23
   │
15 │     public struct C { c: u64, d: u64 } has drop;
   │                       ^ The 'c' field of the 'C' type is unused
   │
   = This warning can be suppressed with '#[allow(unused_field)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09009]: unused struct field
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:15:31
   │
15 │     public struct C { c: u64, d: u64 } has drop;
   │                               ^ The 'd' field of the 'C' type is unused
   │
   = This warning can be suppressed with '#[allow(unused_field)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:18:21
   │
18 │         let _ = &in.0.0[1]. ;
   │                     ^ Possible dot names: 'a::m::test0', 'a::m::test1', 'a::m::test2', or '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:18:23
   │
18 │         let _ = &in.0.0[1]. ;
   │                       ^ Possible dot names: '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:18:27
   │
18 │         let _ = &in.0.0[1]. ;
   │                           ^ Possible dot names: '0'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:18:29
   │
18 │         let _ = &in.0.0[1]. ;
   │                             ^
   │                             │
   │                             Unexpected ';'
   │                             Expected an identifier or a decimal number

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:22:21
   │
22 │         let _ = &in.0.0[1].0[0]. ;
   │                     ^ Possible dot names: 'a::m::test0', 'a::m::test1', 'a::m::test2', or '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:22:23
   │
22 │         let _ = &in.0.0[1].0[0]. ;
   │                       ^ Possible dot names: '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:22:28
   │
22 │         let _ = &in.0.0[1].0[0]. ;
   │                            ^ Possible dot names: '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:22:32
   │
22 │         let _ = &in.0.0[1].0[0]. ;
   │                                ^ Possible dot names: 

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:22:34
   │
22 │         let _ = &in.0.0[1].0[0]. ;
   │                                  ^
   │                                  │
   │                                  Unexpected ';'
   │                                  Expected an identifier or a decimal number

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:26:21
   │
26 │         let _ = &in.0.0[1].0[0]. ;
   │                     ^ Possible dot names: 'a::m::test0', 'a::m::test1', 'a::m::test2', or '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:26:23
   │
26 │         let _ = &in.0.0[1].0[0]. ;
   │                       ^ Possible dot names: '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:26:28
   │
26 │         let _ = &in.0.0[1].0[0]. ;
   │                            ^ Possible dot names: '0'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:26:32
   │
26 │         let _ = &in.0.0[1].0[0]. ;
   │                                ^ Possible dot names: 'c' or 'd'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:26:34
   │
26 │         let _ = &in.0.0[1].0[0]. ;
   │                                  ^
   │                                  │
   │                                  Unexpected ';'
   │                                  Expected an identifier or a decimal number

